git-source/events-to-s3-example/fluentbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentbit-webhook
  labels:
    app: fluentbit-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentbit-webhook
  template:
    metadata:
      labels:
        app: fluentbit-webhook
    spec:
      containers:
      - name: envoy
        image: ghcr.io/yolean/envoy:distroless-v1.37.0
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config
          mountPath: /etc/envoy/envoy.yaml
          subPath: envoy.yaml
      - name: fluent-bit
        image: cr.fluentbit.io/fluent/fluent-bit:4.0
        volumeMounts:
        - name: config
          mountPath: /fluent-bit/etc/fluent-bit.conf
          subPath: fluent-bit.conf
        - name: config
          mountPath: /fluent-bit/etc/parsers.conf
          subPath: parsers.conf
        - name: buffer
          mountPath: /tmp/fluent-bit/s3
      volumes:
      - name: config
        configMap:
          name: fluentbit-webhook
      - name: buffer
        emptyDir: {}
