git-source/events-to-s3-example/fluentbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluentbit-webhook
spec:
  selector:
    app: fluentbit-webhook
  ports:
  - port: 9880
    targetPort: 8080
    name: http
