git-source/events-to-s3-example/gitea-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: git
spec:
  parentRefs:
  - name: ystack
  hostnames:
  - git.ystack.svc.cluster.local
  rules:
  - backendRefs:
    - name: git
      port: 80
